--- a/authdemo/templates/registration/login.html
+++ b/authdemo/templates/registration/login.html
@@ -11,6 +11,7 @@
         {{form.as_p}}
         <input type="submit" value='Sign In'>
         <input type="hidden" name="next" value="{% url 'dashboard' %}">
+        <a href="{% url 'registration' %}">Register</a>
     </form>
 </body>
 </html>
